--- a/src/components/GridItem/GridNode.css
+++ b/src/components/GridItem/GridNode.css
@@ -1,4 +1,24 @@
+:root {
+  --radial: radial-gradient(
+    circle,
+    theme("colors.slate.100") 0%,
+    theme("colors.blue.100") 30%,
+    theme("colors.blue.300") 30%,
+    theme("colors.blue.300") 60%,
+    theme("colors.blue.100") 30%,
+    theme("colors.slate.100") 100%
+  );
+  --linear: linear-gradient(
+    90deg,
+    theme("colors.blue.100") 0%,
+    theme("colors.blue.300") 30%,
+    theme("colors.blue.300") 60%,
+    theme("colors.blue.100") 100%
+  );
+}
+
 .grid-node {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,4 +42,77 @@
 svg {
   fill: theme("colors.gray.700");
   pointer-events: none;
+}
+
+.play-node::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-repeat: no-repeat;
+}
+
+.unvisited::after {
+  animation: bubble 1.5s ease-out;
+  animation-fill-mode: forwards;
+}
+
+.visited::after {
+  background-color: theme("colors.sky.400");
+}
+
+.path::after {
+  background-color: theme("colors.purple.400");
+}
+
+/* .visited::after {
+  animation: shimmer-linear 3s linear;
+  animation-iteration-count: infinite;
+  background: var(--linear);
+  background-size: 200%;
+} */
+
+@keyframes bubble {
+  0% {
+    width: 2%;
+    height: 2%;
+    border-radius: 10px;
+    background-color: theme("colors.blue.700");
+  }
+  50% {
+    width: 50%;
+    height: 50%;
+    border-radius: 100px;
+    background-color: theme("colors.yellow.300");
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    background-color: theme("colors.purple.300");
+  }
+}
+
+@keyframes shimmer-linear {
+  0% {
+    background-position: -20rem 0;
+  }
+  100% {
+    background-position: 0 20rem;
+  }
+}
+
+@keyframes shimmer-radial {
+  0% {
+    background-size: 0% 0%;
+    background-position: center;
+  }
+  100% {
+    background-size: 200% 200%;
+    background-position: center;
+  }
 }
